<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BaiduApiPlayer</string>
    <string name="action_settings">Settings</string>
    
    <string-array name="openAPIArray">
        <item>Baidu OAuth API</item>
        <item>Baidu Map API</item>
    </string-array>
    
    <string-array name="baiduMapAPI">
        <item>Place API</item>
        <item>Geocoding API</item>
        <item>LBS API</item>
    </string-array>
    
    <!-- auth test -->
    <string-array name="authTypeArray">
        <item>basic</item>
        <item>super_msg</item>
        <item>netdisk</item>
        <item>public</item>
        <item>hao123</item>
    </string-array>
    
    <string name="getAuthCode">Get Auth Code</string>
    <string name="getAccessToken">Get Auccess Token</string>
    <string name="validateByAuchCode">1: Authorization Code</string>
    <string name="refreshToken">Refresh Access Token</string>
    <string name="validateByImplicitGrant">2: Implicit Grant</string>
    <string name="validateByCredential">3: Client Credential</string>
    <string name="validateByDevice">4. Device</string>

    <!-- lbs test -->
    <string name="lbsButton">LBS test</string>
    
    <!-- Map place API test -->
    <string-array name="searchRangeArray">
        <item>城市内搜索</item>
        <item>矩形区域内搜索</item>
        <item>圆形区域内搜索</item>
    </string-array>
    
    <string-array name="resultDetail">
        <item>粗糙</item>
        <item>详细</item>
    </string-array>
    
    <string name="searchRange">搜索范围</string>
    <string name="searchQuery">搜索关键字</string>
    <string name="searchRegion">城市</string>
    <string name="squareBounds">矩形搜索区</string>
    <string name="circleBounds">圆形搜索区</string>
    <string name="leftbottom">矩形左上角</string>
    <string name="righttop">矩形右上角</string>
    <string name="circleCenter">圆心</string>
    <string name="circleRadius">圆半径</string>
    <string name="lattitude">纬度</string>
    <string name="longitude">经度</string>
    <string name="resultDetail">返回结果详细程度</string>
    <string name="resultPageRecordNumber">每页结果的记录数</string>
    <string name="resultPageNumber">结果页的页码</string>
    <string name="searchButtonLabel">搜索</string>
    
    <!-- Map geocoding API test -->
    <string name="addressLabel">街道</string>
    <string name="cityLabel">城市</string>
    <string name="addressToCoordination">地址转换成坐标</string>
    <string name="coordinationToAddress">坐标转换成地址</string>
</resources>