<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/getAuthCode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/getAuthCode" />
    <Button
        android:id="@+id/getAccessToken"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/getAccessToken" />
    <Button
        android:id="@+id/validateByAuchCode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/validateByAuchCode" />
    <Button
        android:id="@+id/refreshToken"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/refreshToken" />
    <Button
        android:id="@+id/validateByImplicitGrant"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/validateByImplicitGrant" />
    <Button
        android:id="@+id/validateByCredential"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/validateByCredential" />

</LinearLayout>