<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:stretchColumns="1" >

    <TableRow>

        <TextView
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/addressLabel" />

        <EditText
            android:id="@+id/addressBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </TableRow>

    <TableRow>

        <TextView
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/cityLabel" />

        <EditText
            android:id="@+id/cityBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow>

        <TextView
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/lattitude" />

        <EditText
            android:id="@+id/latBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </TableRow>

    <TableRow>

        <TextView
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/longitude" />

        <EditText
            android:id="@+id/lngBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow>
        <ToggleButton
            android:id="@+id/switchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/addressToCoordination"
            android:textOff="@string/coordinationToAddress"
            android:onClick="onClickSwitch" 
            />
        <Button
            android:id="@+id/transformButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

</TableLayout>