<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">

    <TableRow>
        <TextView
            android:text="@string/searchRange"
            android:gravity="right"
            android:padding="3dip" />

        <Spinner
            android:id="@+id/searchRangeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />       
    </TableRow>
    
    <TableRow>
        <TextView
            android:text="@string/searchQuery"
            android:gravity="right"
            android:padding="3dip" />
        <EditText
            android:id="@+id/searchBox"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />       
    </TableRow>
    
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow>
       <TextView
            android:text="@string/resultDetail"
            android:gravity="right"
            android:padding="3dip" />
        <Spinner
            android:id="@+id/resultDetailSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    
    <TableRow>
        <TextView
            android:text="@string/resultPageRecordNumber"
            android:gravity="right"
            android:padding="3dip" />
        <EditText
            android:id="@+id/recordNumberBox"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />       
    </TableRow>
    
    <TableRow>
        <TextView
            android:text="@string/resultPageNumber"
            android:gravity="right"
            android:padding="3dip" />
        <EditText
            android:id="@+id/pageNumberBox"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />       
    </TableRow>
    
    <View
    android:layout_height="2dip"
    android:background="#FF909090" />
    
    <TableRow>
        <Button android:id="@+id/searchButton"
            android:text="@string/searchButtonLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />       
    </TableRow>
    
</TableLayout>
